--- a/HTML-CSS-Bootstrap/naturalIceCreameClone/styles.css
+++ b/HTML-CSS-Bootstrap/naturalIceCreameClone/styles.css
@@ -3,6 +3,9 @@
     padding: 0;
     margin: 0;
 }
+body{
+    background-color: #f1fde2;
+}
 
 .headerOne{
     background-color: #39a439;
@@ -14,6 +17,15 @@
 
 .greenBTN{
     background-color: #39a439;
+    color: white;
+    border: 0;
+    padding: 5px 7px;
+    font-size: 1rem;
+    border-radius: 3px;
+    text-decoration: none;
+}
+.btnBlack{
+       background-color: black;
     color: white;
     border: 0;
     padding: 5px 7px;
@@ -66,3 +78,76 @@
 .menuItem:hover{
     color: #39a439;
 }
+
+.ImagesThree{
+    display: flex;
+    gap: 15px;
+    justify-content: center;
+    padding: 1rem;
+}
+.imgThree{
+    width: 350px;
+    height: 400px;
+}
+
+.youtube{
+   background-color: white;
+    width: 80%;
+    margin: 5px auto;
+    padding-top: 2rem;
+    border-radius: 7px; 
+}
+iframe{
+    width: 100%;
+    height: 350px;
+    margin-top: 2rem;
+}
+.whiteCardBox{
+    background-color: white;
+    box-shadow: 1px 1px 1px 1px gray;
+    width: 80%;
+    margin: 5px auto;
+    padding: 2rem;
+    border-radius: 7px;
+}
+
+.whiteCardBox h2, .youtube h2{
+    text-align: center;
+    font-weight: 800;
+    font-size: 2.5rem;
+    margin-bottom: 1rem;
+}
+
+.whiteCardBox p, .youtube p{
+    color: gray;
+    line-height: 1.7;
+    margin-bottom: 1rem;
+    text-align: center;
+}
+.whiteCardBox div.btnCenter{
+    /* text-align: center; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.orderOnline{
+    background-color: green;
+    text-align: center;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+
+}
+.orderOnline p{
+    /* text-decoration: underline; */
+    border-bottom: 2px solid white;
+    width: 150px;
+    color: white;
+    font-size: 1.2rem;
+    margin: 1rem auto;
+}
+.onlineStore img{
+    mix-blend-mode: multiply;
+    width: 150px;
+    height: 100px;
+}
+
